--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -30,7 +30,7 @@ $textColor: #718096;
 $textDarkColor: #425466;
 $textColor-dark: #1e265e;
 $borderColor: #edf2f7;
-$shadowColor: #3232470d;
+$shadowColor: #7F6454;
 $border-color: #eee3d6;
 $border-color-2: #dcc797;
 // Theme Based
@@ -41,7 +41,7 @@ $theme-pink: #ff85b3;
 $theme-light-pink: #fedad1;
 $theme-primary: #28293E;
 $theme-primary-light: #f8b2aa;
-$theme-primary-dark: #2e1500;
+$theme-primary-dark: #391400;
 $theme-secondary: #EF6D58;
 // Color Shades
 $theme-success: #4aae8c;
