Fix: Services-Data

--- a/src/pages/AboutPage/style.scss
+++ b/src/pages/AboutPage/style.scss
@@ -69,4 +69,20 @@
             }
         }
     }
+    // How we work????????
+    .how-work-section {
+        background-color: $theme-light-yellow;
+    }
+    // Feature-section
+    .feature-section {
+        background-color: $theme-light-yellow;
+    }
+    /* Service-intro */
+    .service-intro-section {
+        background-color: $theme-light-yellow;
+    }
+    /* Service-info */
+    .service-data {
+        background-color: $theme-light-yellow;
+    }
 }
