--- a/src/components/Header/Navbar/style.scss
+++ b/src/components/Header/Navbar/style.scss
@@ -8,8 +8,8 @@
         height: 70px;
         padding: 0 70px;
         .lists {
-            position: relative;
             display: flex;
+            position: relative;
             justify-content: center;
             align-items: center;
             gap: 150px;
@@ -24,14 +24,14 @@
         }
         .contact-btn {
             a {
-                padding: 10px 30px;
-                border: none;
                 border-radius: 5px;
                 border: 1px solid #707070;
+                padding: 5px 15px;
                 color: $white;
                 font-size: 15px;
                 background: transparent;
-                text-decoration: none;
+                cursor: pointer;
+                width: 100%;
             }
         }
         .active {
