--- a/src/components/ServiceIntro/ServiceInfo/style.scss
+++ b/src/components/ServiceIntro/ServiceInfo/style.scss
@@ -6,7 +6,7 @@
         color: $theme-secondary;
         margin-left: 125px;
     }
-    .description {
+    .para {
         margin-left: 125px;
         max-width: 300px;
         font-size: 40px;
