--- a/src/pages/AboutPage/style.scss
+++ b/src/pages/AboutPage/style.scss
@@ -84,5 +84,10 @@
     /* Service-info */
     .service-data {
         background-color: $theme-light-yellow;
+        padding-bottom: 125px;
+    }
+    // Portfolio-intro
+    .portfolio-intro-section {
+        background-color: $theme-primary;
     }
 }
