--- a/src/components/FormSection/style.scss
+++ b/src/components/FormSection/style.scss
@@ -1,67 +1,58 @@
 @import "../../styles/variables/colors";
 .contact_form {
-    background-color: $theme-primary;
-    height: 100vh;
+    background-color: $theme-light-yellow;
+    min-height: 100vh;
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
-    .form-data {
-        border-radius: 10px;
-        padding: 20px;
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-        width: 600px;
-        .form {
-            .title2 {
-                font-size: 50px;
-                color: $theme-secondary;
-                margin: 0;
-            }
-            .description {
-                color: rgb(139, 139, 139);
-            }
-            .user-info {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-                gap: 30px;
-                color: $white !important;
+    .title1 {
+        color: $theme-secondary;
+    }
+    form {
+        width: 500px;
+        .fullName {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            label {
+                font-size: 20px;
+                font-weight: 500;
                 input {
-                    border: none;
-                    background-color: #4F5C88;
-                    border-radius: 10px;
+                    border-radius: 5px;
                     width: 100%;
-                    outline: none;
-                    padding: 10px 20px;
-                    font-size: 12px;
-                }
-                 ::placeholder {
-                    color: white;
-                }
-            }
-            .msg {
-                display: flex;
-                justify-content: center;
-                width: 100%;
-                margin-top: 30px;
-                textarea {
-                    background-color: #4F5C88;
+                    font-size: 16px;
                     border: none;
                     outline: none;
-                    color: $white;
-                    border-radius: 10px;
+                    background-color: $white;
                     padding: 10px;
                     &::placeholder {
-                        color: $white;
+                        font-size: 15px;
+                        font-weight: 300;
+                        color: $gray-a;
                     }
                 }
             }
-            .btn {
+            .msg {
+                textarea {
+                    background-color: $white;
+                    width: 100%;
+                    border: none;
+                    outline: none;
+                    padding: 10px;
+                    border-radius: 5px;
+                    &::placeholder {
+                        color: $gray-a;
+                    }
+                }
+            }
+            button {
                 background-color: $theme-secondary;
                 border: none;
                 outline: none;
-                padding: 10px 20px;
-                margin-top: 20px;
+                padding: 5px;
                 border-radius: 5px;
+                font-size: 20px;
                 color: $white;
                 cursor: pointer;
             }
