Add: Swiper-in-our-team-page

--- a/src/pages/AboutPage/style.scss
+++ b/src/pages/AboutPage/style.scss
@@ -90,4 +90,12 @@
     .portfolio-intro-section {
         background-color: $theme-primary;
     }
+    // Future-Events
+    .future-events-section {
+        background-color: $theme-primary;
+    }
+    // Our_team
+    .our-team-section {
+        background-color: $theme-primary;
+    }
 }
