--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,6 +16,10 @@
     background: $theme-secondary;
 }
 
+::marker {
+    display: none;
+}
+
 *,
 *::before,
 *::after {
@@ -27,6 +31,7 @@ body {
     height: 100%;
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
     font-size: 14px;
     scroll-behavior: smooth;
     -webkit-font-smoothing: antialiased;
