--- a/src/pages/AboutPage/style.scss
+++ b/src/pages/AboutPage/style.scss
@@ -98,4 +98,16 @@
     .our-team-section {
         background-color: $theme-primary;
     }
+    // .testimonial-section
+    .testimonial-section {
+        background-color: #fdf0e9;
+    }
+    //     {/* FAQ_Section */}
+    .faq-section {
+        background-color: #fdf0e9;
+    }
+    // Our_Award_Section
+    .our-award-section {
+        background-color: #fdf0e9;
+    }
 }
