Add: Blog-cards & New-letter

--- a/src/pages/AboutPage/style.scss
+++ b/src/pages/AboutPage/style.scss
@@ -110,4 +110,12 @@
     .our-award-section {
         background-color: #fdf0e9;
     }
+    // our_blog_pages
+    .our-blog-section {
+        background-color: #fdf0e9;
+    }
+    /* New_letter */
+    .news-letter-section {
+        background-color: #fdf0e9;
+    }
 }
