--- a/src/components/howWork/style.scss
+++ b/src/components/howWork/style.scss
@@ -2,9 +2,9 @@
 @import "../../styles/variables/mixins";
 .how-work {
     display: flex;
-    // justify-content: ;
     gap: 150px;
     border-bottom: 1px solid #f3d1bf;
+    flex-wrap: wrap;
     padding: 90px 0;
     .projects {
         max-width: 500px;
@@ -13,11 +13,18 @@
             font-weight: 100;
             color: $theme-secondary;
             margin-bottom: 30px;
+            @include mobile {
+                font-size: 20px;
+            }
         }
         .title1 {
             font-size: 72px;
             font-weight: 400;
             color: #391400;
+            @include mobile {
+                font-size: 53px;
+                width: 100%;
+            }
         }
         .description {
             font-size: 16px;
