--- a/src/components/Faq/style.scss
+++ b/src/components/Faq/style.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables/colors";
+@import "../../styles/variables/mixins";
 .___faqs {
     padding: 90px 0;
     .title4 {
@@ -11,6 +12,7 @@
         display: flex;
         width: 100%;
         justify-content: center;
+        flex-wrap: wrap;
         gap: 145px;
         .faq_info {
             .title2 {
@@ -33,6 +35,9 @@
         }
         .accordion {
             min-width: 570px;
+            @include mobile {
+                min-width: 361px;
+            }
             .ant-collapse {
                 .ant-collapse-item {
                     border: 1px solid #F3D1BF;
