--- a/src/components/PortfolioIntro/style.scss
+++ b/src/components/PortfolioIntro/style.scss
@@ -72,6 +72,7 @@
             max-width: 30%;
             border-radius: 10px;
             &:hover {
+                background-color: transparent;
                 transform: scale(1.05);
                 transition: all .3s;
                 box-shadow: 0 5px 32px rgba($gray-1, 0.4);
