--- a/src/components/ServiceIntro/ServiceInfo/style.scss
+++ b/src/components/ServiceIntro/ServiceInfo/style.scss
@@ -1,10 +1,14 @@
 @import "../../../styles/variables/colors";
+@import "../../../styles/variables/mixins";
 .service-info {
     .title2 {
         font-size: 24px;
         font-weight: 100;
         color: $theme-secondary;
         margin-left: 125px;
+        @include mobile {
+            margin-left: 0;
+        }
     }
     .para {
         margin-left: 125px;
@@ -12,12 +16,15 @@
         font-size: 40px;
         color: #391400;
         font-weight: 500;
+        @include mobile {
+            margin-left: 0;
+        }
     }
     .card-container {
         display: flex;
-        // padding: 90px 0;
         justify-content: center;
         border-bottom: 1px solid #f3d1bf;
+        flex-wrap: wrap;
         padding-bottom: 50px;
         .card {
             border: 1px solid #f3d1bf;
