--- a/src/components/ServiceIntro/style.scss
+++ b/src/components/ServiceIntro/style.scss
@@ -4,12 +4,16 @@
     display: flex;
     justify-content: space-between;
     padding: 60px 0;
+    flex-wrap: wrap;
     gap: 220px;
     @include mobile {
-        flex-wrap: wrap;
+        gap: 20px;
     }
     .thumb {
-        width: 75%;
+        max-width: 75%;
+        @include mobile {
+            max-width: 100%;
+        }
         img {
             width: 100%;
         }
@@ -27,6 +31,10 @@
             color: #391400;
             max-width: 90%;
             font-weight: 500;
+            @include mobile {
+                width: 100%;
+                font-size: 30px;
+            }
         }
         .description {
             max-width: 500px;
@@ -39,6 +47,9 @@
             gap: 30px;
             .thumb {
                 width: 10%;
+                @include mobile {
+                    width: 35%;
+                }
                 img {
                     width: 100%;
                 }
@@ -55,6 +66,7 @@
                 }
                 .btn {
                     margin-top: 50px;
+                    @include mobile {}
                     a {
                         box-shadow: $shadowSecondary;
                         color: #391400;
