--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,18 +1,37 @@
+@import "../../styles/variables/colors";
 .agency_footer {
     display: flex;
     justify-content: space-between;
     padding: 90px 0;
     .agency {
         .title {
-            font-size: 20px;
+            color: #391400;
+        }
+    }
+    .lists {
+        list-style: none;
+        li {
+            a {
+                color: #391400;
+            }
         }
     }
     .menu {
         display: flex;
         flex-direction: column;
         align-items: center;
-        .lists {
-            list-style: none;
+        .title {
+            font-size: 16px;
+            color: #EF6D58;
+        }
+    }
+    .services {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .title {
+            font-size: 16px;
+            color: #EF6D58;
         }
     }
     .Social_icons {
@@ -20,6 +39,10 @@
             display: flex;
             list-style: none;
             gap: 40px;
+            .anticon {
+                font-size: 35px;
+                color: $theme-secondary;
+            }
         }
     }
 }
