--- a/src/pages/AboutPage/style.scss
+++ b/src/pages/AboutPage/style.scss
@@ -1,6 +1,9 @@
 @import "../../styles/variables/colors";
 @import "../../styles/variables/mixins";
 .about-page {
+    .hero_section {
+        background-color: $theme-primary;
+    }
     .card-container {
         // height: 500px;
         background-color: $theme-light-yellow;
