--- a/src/components/howWork/style.scss
+++ b/src/components/howWork/style.scss
@@ -5,6 +5,7 @@
     gap: 150px;
     border-bottom: 1px solid #f3d1bf;
     flex-wrap: wrap;
+    justify-content: space-between;
     padding: 90px 0;
     .projects {
         max-width: 500px;
