--- a/src/components/contactHeroposter/style.scss
+++ b/src/components/contactHeroposter/style.scss
@@ -13,7 +13,7 @@
         .description {
             font-size: 16px;
             max-width: 470px;
-            color: #707070;
+            color: $white;
             font-weight: 100;
         }
         .contact_btn {
