--- a/src/components/FeaturesDes/style.scss
+++ b/src/components/FeaturesDes/style.scss
@@ -42,22 +42,23 @@
             position: relative;
             flex-wrap: wrap;
             cursor: pointer;
-            &::before {
-                content: "";
-                position: absolute;
-                background: $theme-secondary;
-                width: 20px;
-                height: 20px;
-                opacity: 0;
-            }
+            // &::before {
+            //     content: "";
+            //     position: absolute;
+            //     width: 40px;
+            //     height: 40px;
+            //     background-color: #ef6d58;
+            //     border-radius: 50px;
+            //     opacity: 0;
+            // }
             &:hover {
                 background-color: $white;
-                padding-top: 125px;
+                height: 150%;
                 transition: all .5s;
-                &::before {
-                    opacity: 1;
-                    top: 20px;
-                }
+                // &::before {
+                //     opacity: 1;
+                //     top: 20px;
+                // }
             }
             .title2 {
                 font-size: 24px;
