--- a/src/components/NewLetter/style.scss
+++ b/src/components/NewLetter/style.scss
@@ -1,8 +1,10 @@
+@import "../../styles/variables/colors";
 .news_letter {
     padding: 90px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #F3D1BF;
     .title1 {
         font-size: 50px;
         font-weight: 500;
@@ -29,7 +31,7 @@
                 border: 1px solid #f3d1bf;
                 padding: 8px 10px;
                 cursor: pointer;
-                background-color: transparent;
+                background-color: $white;
             }
         }
     }
