--- a/src/components/SectionIntro/style.scss
+++ b/src/components/SectionIntro/style.scss
@@ -10,6 +10,7 @@
         text-align: center;
         max-width: 570px;
         margin: 0 auto;
-        color: #707070;
+        color: $white;
+        font-weight: 100;
     }
 }
