ADD: Details of Projects

--- a/src/components/BlogCard/style.scss
+++ b/src/components/BlogCard/style.scss
@@ -1,5 +1,6 @@
 @import "../../styles/variables/colors";
 .blog-card {
+    max-width: 370px;
     .card-body {
         .title {
             font-size: 20px;
