--- a/src/components/OurBlogs/style.scss
+++ b/src/components/OurBlogs/style.scss
@@ -16,6 +16,7 @@
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
+        gap: 20px;
         .card {
             background-color: transparent;
             cursor: pointer;
