--- a/src/components/ServiceIntro/style.scss
+++ b/src/components/ServiceIntro/style.scss
@@ -29,7 +29,7 @@
         .title1 {
             font-size: 56px;
             color: #391400;
-            max-width: 90%;
+            max-width: 404px;
             font-weight: 500;
             @include mobile {
                 width: 100%;
