--- a/src/components/Features/style.scss
+++ b/src/components/Features/style.scss
@@ -19,6 +19,10 @@
             font-weight: 400;
             max-width: 560px;
             color: #391400;
+            @include mobile {
+                font-size: 40px;
+                width: 100%;
+            }
         }
         .description {
             font-size: 16px;
