--- a/src/components/HeroSection/style.scss
+++ b/src/components/HeroSection/style.scss
@@ -15,6 +15,13 @@
         .title2 {
             color: $theme-secondary;
             font-weight: 100;
+            @include mobile {
+                font-size: 16px;
+            }
+            // @include iphone5 {
+            //     font-size: 20px;
+            //     background-color: red;
+            // }
         }
         .title1 {
             font-size: 72px;
@@ -22,7 +29,7 @@
             color: $white;
             margin: 0;
             @include mobile {
-                font-size: 56px;
+                font-size: 40px;
             }
         }
         .description {
@@ -32,6 +39,7 @@
             line-height: 40px;
             @include mobile {
                 max-width: 100%;
+                font-size: 16px;
             }
         }
         .btns {
