--- a/src/components/OurTeam/style.scss
+++ b/src/components/OurTeam/style.scss
@@ -15,27 +15,34 @@
     .card-slider {
         padding: 90px 0;
         overflow: hidden;
-        position: relative;
-        .flickity-button {
-            // position: absolute;
-            // top: 0;
-            // // right: 50px;
-        }
-        .flickity-page-dots {
-            display: flex;
-            gap: 25px;
-            justify-content: center;
-            .dot {
-                background-color: transparent;
-                width: 12px;
-                height: 12px;
-                opacity: 1;
-                border-radius: 50px;
-                border: 1px solid gray;
-                cursor: pointer;
+        .carousel {
+            // position: relative;
+            &:focus-visible {
+                outline: none;
             }
-            .is-selected {
-                background-color: $theme-secondary;
+            .flickity-button {
+                // top: -10px;
+            }
+            .flickity-page-dots {
+                display: flex;
+                gap: 25px;
+                justify-content: center;
+                .dot {
+                    background-color: transparent;
+                    width: 12px;
+                    height: 12px;
+                    opacity: 1;
+                    border-radius: 50px;
+                    border: 1px solid gray;
+                    margin-top: 20px;
+                    cursor: pointer;
+                    &::marker {
+                        color: $theme-primary;
+                    }
+                }
+                .is-selected {
+                    background-color: $theme-secondary;
+                }
             }
         }
     }
