--- a/src/components/PortfolioIntro/style.scss
+++ b/src/components/PortfolioIntro/style.scss
@@ -68,5 +68,8 @@
         gap: 30px;
         background-color: transparent;
         padding: 20px 0;
+        .portfolio-card {
+            cursor: pointer;
+        }
     }
 }
