--- a/src/pages/ServicePage/styles.scss
+++ b/src/pages/ServicePage/styles.scss
@@ -88,6 +88,7 @@
                     }
                     .design-lists {
                         list-style: none;
+                        margin-left: 20px;
                         li {
                             position: relative;
                             font-size: 16px;
