--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -133,11 +133,23 @@ a {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @include mobile {
+            flex-direction: column;
+            gap: 20px;
+            padding: 20px;
+        }
+        .year {
+            font-size: 16px;
+        }
         .policy {
             display: flex;
             gap: 25px;
             align-items: center;
             padding: 40px 0;
+            @include mobile {
+                padding: 0;
+                justify-content: space-between;
+            }
         }
     }
 }
